--- a/resume/style.css
+++ b/resume/style.css
@@ -1,58 +1,132 @@
 /*styles for my resume
 */
 body {
- font-family: Arial, open-sans;
- color: #444
+ font-family: 'Open Sans', Arial, sans-serif;
+font-size: 1em;
+ color: #444;
+ font-weight: 400;
 }
+
+#container {
+width: 100%;
+max-width: 1200px;
+margin:0 auto;
+padding-bottom: 50px;
+}
+
 /*This styles my name 
 */
-h1 {
+#name {
   font-size: 3em;  
   color: #33485e;
   text-transform: uppercase;
   text-align: center;
+  border-bottom: 1px solid #33485e;
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
 }
 
 /*This styles my title
 */
-strong {
+#title {
     text-transform: uppercase;
     font-size: 1.5em;
     color:#33485e;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+
  }
 
- li {
+ .menu {
+    font-family: 'Open Sans', Arial, sans-serif;
     font-size: 1em;
+    color: #444;
+    font-weight: 400;
+    font-size: 1em;
+    display: inline;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+
  }
 
  /*This styles my section titles
 */
- h2 {
+ .sectionheader {
      text-transform: uppercase;
     font-size: 1.5em;
      background-color:#33485e;
      color: white;
      font-weight: 400;
+     margin-top: 20px;
+     margin-bottom: 10px;
+     margin-left: 0px;
+     margin-right: 0px;
+     width: 70%;
+     min-width: 300px;
  }
 
 /*This styles my job titles
 */
- h3{
+ .jobtitle{
     font-weight: 600;
     font-size: 1.5em;
  }
 
  /*This styles my job organization
  */
- h4{
+ .organization{
     font-weight: 400;
-    font-size: 1.5em;
+    font-size: 1.25em;
  }
 
  /*This styles my job dates
  */
- h5{
+ .date{
     font-weight: 400;
     font-size: 1em;
     font-style: italic;
+    margin-top: 2px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
  }
+ 
+ /*This styles by job descriptions
+ */
+ .description{
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 1em;
+    color: #444;
+    font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+ }
+
+#degrees{
+margin-top: 5px;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;  
+} 
+
+#do{
+margin-top: 5px;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;    
+}
+
+.top{
+    width: 60%;
+    min-width: 300px;
+    margin:0 auto;
+    margin-bottom: 30px;
+}
