--- a/KylesLayout/stylesheet.css
+++ b/KylesLayout/stylesheet.css
@@ -1,11 +1,26 @@
+img {
+    max-width: 100%;
+    height: auto;
+
+}
+
 #content {
     margin: 0 auto;
     width: 900px;
+    max-width: 100%;
+    height: auto;
 }
 
 .title{
     font-family: Georgia, 'Times New Roman', Times, serif
-    font-
+    
+}
+
+.img {
+max-width: 100%;
+height: auto;
+display: block;
+margin-bottom: 1em;
 }
 
 .h1{
@@ -21,13 +36,17 @@ font-weight: 13px;
 
 .p{
 font-family: Georgia, serif;  
-font-size: 13px;  
+font-size: 13px;
+margin-bottom: 1em;
+text-align: center;  
 }
 
-h3{
-font-family: ;
-}
 
 .blockquote{
     
+}
+
+.h4{
+font-weight: bold;
+text-align: center;
 }
