--- a/kyleslayout/stylesheetm.css
+++ b/kyleslayout/stylesheetm.css
@@ -2,7 +2,7 @@
   display:block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 100%;
 }
 
 #content {
@@ -18,18 +18,18 @@
 
 /*This styles my photos on my webpage 
 */
-#image {
+
+image {
 max-width: 100%;
-height: auto;
+height: 200px;
+width: 50px;
 display: block;
 margin-bottom: 1em;
 }
 
-
-
 .h1{
-font: Helvetica, sans-serif;
-font-weight: 14px;
+font: Helvetica, serif;
+font-size: 14px;
 }
 
 .byline{
@@ -45,18 +45,14 @@ text-align: center;
 }
 
 
-blockquote{
+.blockquote{
 font: 16px/24px normal helvetica, sans-serif;
 font-style: italic;
 margin-top: 15px;  
 margin-bottom: 15px;
-color: red; 
+color: green; 
 margin-left: 50px;
 padding-left: 15px;
 border-left: 4px solid #ccc;
 }
 
-.h4{
-font-weight: bold;
-text-align: center;
-}
