--- a/resume_project/stylesheet.css
+++ b/resume_project/stylesheet.css
@@ -1,42 +1,76 @@
 body {
-    background-image: url('images/newsprint.jpeg'); 
-    background-repeat: no-repeat; 
+    background-image: url('images/bg3c.jpg');
+    background-repeat: repeat; 
     background-size: cover; 
     background-attachment: fixed;
   }
 
-img {
-width: 100%;
-height: auto;
-max-width: 100%;
+  .navbar-brand {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+.masthead-image img{
+  width: 80%;
+  height: auto;
+  display: block;
+  border-radius: 5%;
+  margin: 50px auto;
 }
 
 .container1{
 font-family: Georgia, 'Times New Roman', Times, serif;
-margin-top: 50px;  
-margin-bottom: 50px; 
-margin-left: 50px;
-padding-left: 50px;
-background-color: #97CE7D; 
+padding: 35px;
+background-color: #97CE7D;
+margin: 50px auto;
+width: 60%; 
 border-radius: 5%;
 text-align: left;
 }
 
-.container{
-font-family: Georgia, 'Times New Roman', Times, serif;
-margin-top: 50px;  
-margin-bottom: 50px; 
-margin-left: 50px;
-padding-left: 50px;
-background-color: #97CE7D; 
-border-radius: 5%;  
+.row{
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 10;
 }
+
+.col-md-8{
+flex: 2; 
+font-family: Georgia, 'Times New Roman', Times, serif;
+padding:20px;
+border-radius: 5%;
+background-color: #97CE7D;
+opacity: 0.8;
+text-align: left;
+}
+
+.col-md-4{
+flex: 1;
+font-family: Georgia, 'Times New Roman', Times, serif;
+padding:20px;
+border-radius: 5%;
+background-color: #97CE7D; 
+opacity: 0.8;
+text-align: left; 
+}
+
+@media (max-width:768px) {
+  .row{
+    flex-direction: column;
+  }
+}
+
 
 .h2{
 font-size: 26px;
 font-weight: 18px;
 }
 
-#col-6{
-    text-align: center;
+footer{
+text-align: center;
+padding: 15px 0;
 }
+
