html_frame_kyles

--- a/resume_project/stylesheet.css
+++ b/resume_project/stylesheet.css
@@ -5,14 +5,12 @@ body {
     background-attachment: fixed;
   }
 
-  html{
-    scroll-behavior: smooth;
-  }
+  
 
   .navbar-brand {
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
 }
 
